<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TrivialPolyUR</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="new_party">Nueva Partida</string>
    <string name="configuration">Configuración</string>
    <string name="help">Ayuda</string>
    <string name="exit">Salida</string>
    <string name="img_logo">imagen_logo</string>
    <string name="bt_Ayuda">Ayuda</string>
    <string name="bt_Salir">Salir</string>
    <string name="bt_Configuracion">Configuración</string>
    <string name="bt_NuevoJuego">Nuevo Juego</string>
    <string name="Dinero">Dinero</string>
    <string name="atras">Atras</string>
    <string name="NCalles">Numero Calles</string>
    <string name="NCarreras">Nº Carreras</string>
    <string name="NEdificios">Nº Edificios</string>
    <string name="TBiblioteca">T.Biblioteca</string>
    <string name="Estudiando">Esta estudiando?</string>
    <string name="DineroTotal">Dinero total</string>
    <string name="Estudiando1">Estudiando?</string>

</resources>
